style: small fixes on safari and carousel background

--- a/app/ui/reviews/Reviews.scss
+++ b/app/ui/reviews/Reviews.scss
@@ -197,6 +197,7 @@
   max-width: 1100px;
   width: 100%;
   box-sizing: border-box;
+  background-color: $background;
 
   .control-dots {
     margin: 0;
@@ -348,18 +349,6 @@
     ) {
       text-shadow: 3px 3px 10px rgba(195, 186, 188, 0.31);
     }
-  }
-}
-
-// css hack for targeting only safari
-@supports (-webkit-hyphens: none) {
-  .CircularProgressbar .CircularProgressbar-text {
-    transform: translateY(8px);
-    text-shadow: 3px 1px 10px rgba(195, 186, 188, 0.773);
-  }
-
-  .review-slide__title {
-    text-shadow: -2px 1px 10px rgba(195, 186, 188, 0.357);
   }
 }
 
